Fix stuck path position (closes #248)

--- a/components/path/stylesheets/path.styl
+++ b/components/path/stylesheets/path.styl
@@ -137,10 +137,6 @@ privacy-color('.path__breadcrumb li.path__channel.privacy-', color)
       color hovergray
       font-weight bold
 
-@media (max-width:(block_width_mar * 4) + 30)
-  .path.stuck
-    top 6px
-
 @media (max-width:(block_width_mar * 3) + 30)
   .path
     .path__headline
